feat: add images loader

--- a/src/header/header.pug
+++ b/src/header/header.pug
@@ -1,4 +1,5 @@
 header(class='header')
   .header__logo
-  .header__contacts 
+    img(src="header_logo.svg", alt="logo")
+  .header__contacts
   .header__user
