--- a/src/index.pug
+++ b/src/index.pug
@@ -7,3 +7,11 @@ html(lang="en")
     title Document
   body 
     include ./header/header.pug
+    .navigation
+      nav(class="nav")
+        a(href="#" class='nav__item nav__item_hosting') хостинг
+        a(href="#" class='nav__item nav__item_vps') vps
+        a(href="#" class='nav__item nav__item_domain') регистрация доменов
+        a(href="#" class='nav__item nav__item__ssl') ssl
+        a(href="#" class='nav__item nav__item_provider') хостинг-провайдер
+          span(class="dropdown-icon")
