feat: add main info block content

--- a/src/index.pug
+++ b/src/index.pug
@@ -15,3 +15,4 @@ html(lang="en")
         a(href="#" class='nav__item nav__item__ssl') ssl
         a(href="#" class='nav__item nav__item_provider') хостинг-провайдер
           span(class="dropdown-icon")
+    include ./main-info/main-info.pug
