--- a/src/index.scss
+++ b/src/index.scss
@@ -16,12 +16,26 @@ body {
   font-family: "SF Pro Display";
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 .navigation {
+  position: relative;
   height: 60px;
   background: #ffffff;
 
   display: flex;
   align-items: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  padding-bottom: 4px;
 
   .nav {
     // width: 86.7%;
