feat: add price offer

--- a/src/main-info/main-info.pug
+++ b/src/main-info/main-info.pug
@@ -10,4 +10,7 @@ section(class="main-info")
       .description__block
         p(class="description__text description__text_title")  Всё включено:
         p(class="description__text" style="letter-spacing: 0.54px")  PHP 5.4 – 8.0, Perl, FTP, MySQL, ISPManager
+    
+  .main-info__price-offer Всего от&nbsp;
+    b(style="letter-spacing: 1px") 99 ₽ в месяц!
 
