--- a/src/main-info/main-info.pug
+++ b/src/main-info/main-info.pug
@@ -11,6 +11,8 @@ section(class="main-info")
         p(class="description__text description__text_title")  Всё включено:
         p(class="description__text" style="letter-spacing: 0.54px")  PHP 5.4 – 8.0, Perl, FTP, MySQL, ISPManager
     
-  .main-info__price-offer Всего от&nbsp;
+  .main-info__offer-price Всего от&nbsp;
     b(style="letter-spacing: 1px") 99 ₽ в месяц!
+    img(src="arrow.svg", alt="arrow" class="offer-price__arrow")
+  button(class="main-info__btn") Заказать хостинг
 
