--- a/src/main-info/main-info.scss
+++ b/src/main-info/main-info.scss
@@ -1,12 +1,16 @@
 .main-info {
   position: relative;
 
+  min-width: 320px;
+
   background: linear-gradient(91.37deg, #5994ba 14.63%, #adcce0 99.01%);
   color: #ffffff;
 
-  padding: 53px 50px 115px 50px;
+  padding: 53px 0 115px 3.2%;
 
   .main-info__inner {
+    min-width: 300px;
+    max-width: 1440px;
     width: 88%;
     margin: 0 auto;
 
@@ -42,51 +46,120 @@
     }
   }
 
-  .main-info__offer-price {
+  .main-info__offer {
     position: absolute;
-    bottom: 62px;
+    top: 385px;
     left: -2%;
 
-    // width: 380px;
-    width: 28.4%;
-    height: 46px;
+    width: 100%;
+    min-width: 300px;
 
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    display: grid;
+    grid-template-columns: minmax(300px, 439px) 232px;
+    grid-gap: 69px;
 
-    // padding: 0 10px;
+    .offer__price {
+      position: relative;
 
-    background: rgba(27, 86, 124, 1);
-    box-shadow: 10px 10px 0 rgba(254, 133, 114, 1);
+      // width: 380px;
+      // width: 28.4%;
+      width: 100%;
+      height: 46px;
+      min-width: 300px;
 
-    font-size: 24px;
-    padding-right: 30px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
 
-    .offer-price__arrow {
-      position: absolute;
-      left: 87%;
-      top: 90%;
+      // padding: 0 10px;
+
+      background: rgba(27, 86, 124, 1);
+      box-shadow: 10px 10px 0 rgba(254, 133, 114, 1);
+
+      font-size: 24px;
+
+      .offer__text {
+        margin-right: 30px;
+      }
+
+      .offer__arrow {
+        position: absolute;
+        left: 87%;
+        top: 90%;
+      }
+    }
+
+    .offer__btn {
+      // position: fixed;
+      // top: 559px;
+      // left: 33.2%;
+
+      width: 232px;
+      height: 44px;
+
+      font-size: 20px;
+      letter-spacing: 1px;
+      color: #ffffff;
+
+      border: none;
+      outline: none;
+
+      background: #fa6232;
+      box-shadow: 0px 4px 4px rgba(46, 46, 46, 0.27);
+      border-radius: 5px;
     }
   }
+}
 
-  .main-info__btn {
-    position: absolute;
-    bottom: 64px;
-    left: 479px;
+// @media screen and (max-width: 1000px) {
+//   .main-info {
+//     .main-info__btn {
+//       left: 50%;
+//       top: 630px;
+//     }
+//   }
+// }
 
-    width: 232px;
-    height: 44px;
-
-    font-size: 20px;
-    letter-spacing: 1px;
-    color: #ffffff;
-
-    border: none;
-    outline: none;
-
-    background: #fa6232;
-    box-shadow: 0px 4px 4px rgba(46, 46, 46, 0.27);
-    border-radius: 5px;
+@media screen and (max-width: 735px) {
+  .main-info {
+    .main-info__offer {
+      top: 470px;
+    }
   }
 }
+
+@media screen and (max-width: 600px) {
+  .main-info .main-info__inner {
+    .main-info__title {
+      font-size: 65px;
+      line-height: 67px;
+      letter-spacing: 1px;
+    }
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .main-info {
+    padding-bottom: 200px;
+    .main-info__offer {
+      grid-gap: 20px;
+      grid-template-columns: minmax(300px, 408px);
+
+      .offer__price .offer__arrow {
+        transform: rotate(160deg) rotateX(180deg);
+        left: 65%;
+        top: 130px;
+      }
+    }
+  }
+}
+
+// @media screen and (max-width: 400px) {
+//   .main-info .main-info__inner {
+//     .main-info__title {
+//       font-size: 35px;
+//       line-height: 50px;
+//     }
+//   }
+// }
+// transform: rotate(70deg) rotateX(180deg);
