--- a/src/header/header.pug
+++ b/src/header/header.pug
@@ -6,12 +6,14 @@ header(class='header')
       .item__inner
         .item__icon 
           img(src="number_icon.svg", alt="number")
+          span(class='item__contact_hidden') +7 (495) 123-45-56
         span(class='item__contact item__contact_number') +7 (495) 123-45-56
       span(class="item__footer")
     li(class="contacts__item")
       .item__inner
         .item__icon 
           img(src="mail_icon.svg", alt="mail")
+          span(class='item__contact_hidden') support@wshost.ru
         span(class='item__contact item__contact_mail') support@wshost.ru
       span(class="item__footer") (поддержка 24/7)
   .header__user
