--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,8 @@ p {
   height: 60px;
   background: #ffffff;
 
+  min-width: 320px;
+
   display: flex;
   align-items: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -40,7 +42,16 @@ p {
   .nav {
     // width: 86.7%;
     width: 1296px;
+    min-width: 300px;
+    max-width: 1440px;
     height: 20px;
+
+    overflow-x: scroll;
+
+    &::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+    }
 
     display: grid;
     grid-template-columns: 209px 182px 369px 171px 351px;
