--- a/src/main-info/main-info.pug
+++ b/src/main-info/main-info.pug
@@ -14,7 +14,7 @@ section(class="main-info")
   .main-info__offer
     .offer__price 
       span(class="offer__text") Всего от&nbsp;
-        b(style="letter-spacing: 1px") 99 ₽ в месяц!
+        b(style="letter-spacing: 1px; font-weight: 500") 99 ₽ в месяц!
       img(src="arrow.svg", alt="arrow" class="offer__arrow")
     button(class="offer__btn") Заказать хостинг
 
