--- a/src/main-info/main-info.pug
+++ b/src/main-info/main-info.pug
@@ -2,19 +2,19 @@ section(class="main-info")
   .main-info__inner
     .main-info__title Платный хостинг для сайта
 
-    .main-info__description
-      .description__block
-        p(class="description__text description__text_title") Совместим с любыми CMS: 
-        p(class="description__text" style="letter-spacing: 0.7px")  1С-Битрикс, Wordpress, Opencart, DLE, Joomla и др.
+    .main-info__description(class="block-description")
+      p(class="block-description__p description__p")
+        span Совместим с любыми CMS: #[br]
+        b(class="bold-text" style="letter-spacing: 0.25px")  1С-Битрикс, Wordpress, Opencart, DLE, Joomla и др.
 
-      .description__block
-        p(class="description__text description__text_title")  Всё включено:
-        p(class="description__text" style="letter-spacing: 0.54px")  PHP 5.4 – 8.0, Perl, FTP, MySQL, ISPManager
+      p(class="block-description__p description__p")
+        span Всё включено: #[br]
+        b(class="bold-text" style="letter-spacing: 0.23px")   PHP 5.4 – 8.0, Perl, FTP, MySQL, ISPManager
   
   .main-info__offer
     .offer__price 
       span(class="offer__text") Всего от&nbsp;
-        b(style="letter-spacing: 1px; font-weight: 500") 99 ₽ в месяц!
+        b(class="bold-text" style="letter-spacing: 0.3px;") 99 ₽ в месяц!
       img(src="arrow.svg", alt="arrow" class="offer__arrow")
     button(class="offer__btn") Заказать хостинг
 
