--- a/src/main-info/main-info.scss
+++ b/src/main-info/main-info.scss
@@ -6,7 +6,7 @@
   background: linear-gradient(91.37deg, #5994ba 14.63%, #adcce0 99.01%);
   color: #ffffff;
 
-  padding: 53px 0 115px 3.2%;
+  padding: 53px 0 119px 3.2%;
 
   .main-info__inner {
     min-width: 300px;
@@ -25,23 +25,10 @@
     }
 
     .main-info__description {
-      margin-top: 37px;
+      margin-top: 33px;
 
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-
-      .description__block {
-        height: 71px;
-
-        margin: 0;
-        font-size: 20px;
-
-        .description__text {
-          &.description__text_title {
-            margin-bottom: 7px;
-          }
-        }
+      .description__p {
+        margin-bottom: 11px;
       }
     }
   }
@@ -61,8 +48,6 @@
     .offer__price {
       position: relative;
 
-      // width: 380px;
-      // width: 28.4%;
       width: 100%;
       height: 46px;
       min-width: 300px;
@@ -70,8 +55,6 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
-
-      // padding: 0 10px;
 
       background: rgba(27, 86, 124, 1);
       box-shadow: 10px 10px 0 rgba(254, 133, 114, 1);
@@ -90,23 +73,10 @@
     }
 
     .offer__btn {
-      // position: fixed;
-      // top: 559px;
-      // left: 33.2%;
-
-      width: 232px;
-      height: 44px;
-
-      font-size: 20px;
       letter-spacing: 1px;
-      color: #ffffff;
-
-      border: none;
-      outline: none;
 
       background: #fa6232;
       box-shadow: 0px 4px 4px rgba(46, 46, 46, 0.27);
-      border-radius: 5px;
     }
   }
 }
