--- a/src/tariffs/card/card.scss
+++ b/src/tariffs/card/card.scss
@@ -83,9 +83,8 @@
         align-items: center;
         justify-content: center;
 
-        .price__value_bold {
+        .price__value_per-month {
           font-size: 36px;
-          line-height: 30px;
         }
 
         &.price__value_actual {
@@ -96,11 +95,6 @@
             rgba(191, 230, 255, 0) 100%
           );
           color: #1b567c;
-
-          .price__value_bold {
-            font-weight: 600;
-            letter-spacing: 1.6px;
-          }
         }
 
         &.price__value_discount {
@@ -117,14 +111,7 @@
       left: 27px;
 
       background: #67a8d2;
-      border-radius: 5px;
-
-      font-weight: 500;
-      font-size: 20px;
-      text-align: center;
       letter-spacing: 1px;
-      color: #ffffff;
-
       padding: 10px 42px;
     }
   }
