--- a/src/tariffs/tariffs.scss
+++ b/src/tariffs/tariffs.scss
@@ -8,28 +8,9 @@
     margin: 0 auto;
     letter-spacing: 2px;
 
-    .tariffs__title {
-      text-align: center;
-      font-size: 48px;
-      line-height: 72px;
-    }
-
     .tariffs__description {
       width: 51%;
-
-      font-size: 20px;
-      line-height: 30px;
-
       margin-top: 57px;
-
-      .description__content {
-        margin-bottom: 23px;
-        letter-spacing: 0.01px;
-
-        .description__content_bold {
-          font-weight: 600;
-        }
-      }
     }
 
     .tariffs__cards {
@@ -37,7 +18,7 @@
       grid-template-columns: repeat(auto-fit, 280px);
       grid-gap: 20px;
 
-      margin-top: 46px;
+      margin: 46px auto 0 auto;
     }
   }
 }
